--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.exemplo</groupId>
+    <groupId>labsoftware</groupId>
     <artifactId>LabSoftware</artifactId>
     <version>1.0-SNAPSHOT</version>
 
